Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47276

Webengine parent transparency cause other widgets to disappear or stretch

    XMLWordPrintable

Details

    • b46ffbca0cfad41599873d4ca19dc79167c3955f

    Description

      Run attached sample application.

      There's transparent widget that contains child widgets. One is webengineview. When webengine loads URL in widget constructor it makes other widgets disappear (bad.png). If URL is loaded from the slot it works correctly (good.png).

      There's other issue that if parent is transparent and it's resized it makes other than webview content to stretch (resize_stretch). Without transparent parent it works correctly (resize_good.png). Stretched widget focus area is not stretched.

      Attachments

        1. bad.png
          bad.png
          111 kB
        2. good.png
          good.png
          80 kB
        3. QTBUG-47276.zip
          6 kB
        4. resize_good.png
          resize_good.png
          45 kB
        5. resize_stretch.png
          resize_stretch.png
          156 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes